[gd_scene load_steps=16 format=2]

[ext_resource path="res://prologue.gd" type="Script" id=1]
[ext_resource path="res://vehicles/vehicle_camera.gd" type="Script" id=2]
[ext_resource path="res://vehicles/cars/car_car1.tscn" type="PackedScene" id=3]
[ext_resource path="res://fonts/DroidSansFallback.ttf" type="DynamicFontData" id=4]

[sub_resource type="ProceduralSky" id=1]
sky_energy = 0.7
sun_energy = 0.5

[sub_resource type="Environment" id=2]
background_mode = 2
background_sky = SubResource( 1 )

[sub_resource type="BoxShape" id=3]
extents = Vector3( 100, 0.2, 100 )

[sub_resource type="CubeMesh" id=4]
size = Vector3( 8, 0.2, 300 )
subdivide_width = 4
subdivide_depth = 300

[sub_resource type="SpatialMaterial" id=5]
albedo_color = Color( 0.34902, 0.34902, 0.34902, 1 )
metallic = 0.1
roughness = 0.8

[sub_resource type="BoxShape" id=6]
extents = Vector3( 2, 1, 8 )

[sub_resource type="SpatialMaterial" id=7]
albedo_color = Color( 0.176471, 0.678431, 0.243137, 1 )

[sub_resource type="PlaneMesh" id=8]
material = SubResource( 7 )
size = Vector2( 100, 300 )
subdivide_width = 200
subdivide_depth = 200

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 1, 0, 0, 1 )
border_blend = true

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="DynamicFont" id=11]
use_mipmaps = true
use_filter = true
font_data = ExtResource( 4 )

[node name="prologue" type="Spatial"]
script = ExtResource( 1 )

[node name="vehicle_camera" type="Spatial" parent="."]
transform = Transform( -1.44659e-07, -0.460014, 0.887912, -7.49458e-08, 0.887912, 0.460014, -1, 0, -1.62921e-07, 4.402, 2, 41.8045 )
script = ExtResource( 2 )
target_path = NodePath("../cam")

[node name="Camera" type="Camera" parent="vehicle_camera"]
environment = SubResource( 2 )

[node name="StaticBody" type="StaticBody" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.1, 0 )
shape = SubResource( 3 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.990268, -0.134431, 0.0360206, 0, 0.258819, 0.965926, -0.139173, -0.956526, 0.2563, 0, 20, 0 )
shadow_enabled = true

[node name="car1" parent="." instance=ExtResource( 3 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 2.49955, 0.445234, 41.5646 )

[node name="cam" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.4, 0 )

[node name="road" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.1, 0 )
mesh = SubResource( 4 )
material/0 = SubResource( 5 )

[node name="Area" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.03741, 0, -80.0024 )

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
shape = SubResource( 6 )

[node name="car_wrap" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.5, 0.4, 76.3702 )

[node name="ground" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -54, 0, 0 )
mesh = SubResource( 8 )
material/0 = null

[node name="ground2" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 54, 0, 0 )
mesh = SubResource( 8 )
material/0 = null

[node name="progress" type="ProgressBar" parent="."]
anchor_left = -0.00411183
anchor_top = 1.00702
anchor_right = 0.995888
anchor_bottom = 1.00702
margin_left = 8.42108
margin_top = -72.9475
margin_right = 8.42114
margin_bottom = -8.94751
rect_min_size = Vector2( 64, 64 )
size_flags_horizontal = 3
size_flags_vertical = 1
custom_styles/fg = SubResource( 9 )
custom_styles/bg = SubResource( 10 )
custom_fonts/font = SubResource( 11 )
custom_colors/font_color = Color( 0, 0, 0, 0 )
custom_colors/font_color_shadow = Color( 0.564706, 0.109804, 0.109804, 0.384314 )
__meta__ = {
"_edit_use_anchors_": true
}
